feat: mvp working locally to show / hide based on jwt token

--- a/packages/site-injection-app/super-so-code-import.html
+++ b/packages/site-injection-app/super-so-code-import.html
@@ -26,7 +26,8 @@
 
     (function(d) {
         const script = d.createElement("script");
-        script.src = "../website-injection/build/static/js/main.js"
+        // TODO: Change link to be external
+        script.src = "../packages/site-injection-app/build/static/js/main.js"
         script.type = "module";
         script.defer = true;
         d.head.insertBefore(script, d.head.firstChild);
