--- a/super-so-site-testing/cv-super-so-site.html
+++ b/super-so-site-testing/cv-super-so-site.html
@@ -4,29 +4,14 @@
 
 <!-- TODO: Make the styling neater -->
 <style>
-    body {
-        max-height: 100vh;
-        width: 100vw;
-        overflow: hidden;
-    }
-
-    #fill-page-container {
-        width: 100vw;
-        height: 100vh;
-        position: absolute;
-        background: #1c2022;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 69;
-    }
+    body {max-height: 100vh;width: 100vw;overflow: hidden;}
+    #fill-page-container {width: 100vw;height: 100vh;position: absolute;background: #1c2022;display: flex;align-items: center;justify-content: center;z-index: 69;}
 </style>
 <script defer type="module">
-    const MembershipBlockId = 1638;
+    document.guildId = 1638;
     const fillPageContainer = document.createElement("div");
     fillPageContainer.id = "fill-page-container";
     document.body.insertBefore(fillPageContainer, document.body.firstChild);
-
     (function(d) {
         const script = d.createElement("script");
         // TODO: Change link to be external
