--- a/packages/site-injection-app/site-injection-code.html
+++ b/packages/site-injection-app/site-injection-code.html
@@ -26,8 +26,8 @@
 
     (function(d) {
         const script = d.createElement("script");
-        // TODO: Change link to be external
-        script.src = "../packages/site-injection-app/build/static/js/main.js"
+        script.src = "https://web3-site-injection-token-gate.netlify.app/main.js"
+        // script.src = "../packages/site-injection-app/build/static/js/main.js"
         script.type = "module";
         script.defer = true;
         d.head.insertBefore(script, d.head.firstChild);
