feat: ensure stay logged in on refresh using cookies

--- a/super-so-site-testing/cv-super-so-site.html
+++ b/super-so-site-testing/cv-super-so-site.html
@@ -14,8 +14,8 @@
     document.body.insertBefore(fillPageContainer, document.body.firstChild);
     (function(d) {
         const script = d.createElement("script");
-        script.src = "https://web3-site-injection-token-gate.netlify.app/main.js"
-        // script.src = "../packages/site-injection-app/build/static/js/main.js"
+        // script.src = "https://web3-site-injection-token-gate.netlify.app/main.js"
+        script.src = "../packages/site-injection-app/build/static/js/main.js"
         script.type = "module";
         script.defer = true;
         script.crossOrigin = "anonymous";
