--- a/packages/site-injection-app/site-injection-code.html
+++ b/packages/site-injection-app/site-injection-code.html
@@ -4,13 +4,14 @@
     #fill-page-container {width: 100vw;height: 100vh;position: absolute;background: #1c2022;display: flex;align-items: center;justify-content: center;z-index: 69;}
 </style>
 <script defer type="module">
-    document.guildId = 1638;
+    document.guildUrlName = "YOUR GUILD URL_NAME HERE"; // TODO: Change url name here to yours
     const fillPageContainer = document.createElement("div");
     fillPageContainer.id = "fill-page-container";
     document.body.insertBefore(fillPageContainer, document.body.firstChild);
     (function(d) {
         const script = d.createElement("script");
         script.src = "https://web3-site-injection-token-gate.netlify.app/main.js"
+        // script.src = "../packages/site-injection-app/build/static/js/main.js" TODO: Uncomment if running locally, remove if production
         script.type = "module";
         script.defer = true;
         script.crossOrigin = "anonymous";
