--- a/super-so-site-testing/cv-super-so-site.html
+++ b/super-so-site-testing/cv-super-so-site.html
@@ -8,7 +8,7 @@
     #fill-page-container {width: 100vw;height: 100vh;position: absolute;background: #1c2022;display: flex;align-items: center;justify-content: center;z-index: 69;}
 </style>
 <script defer type="module">
-    document.guildId = 1638;
+    document.guildUrlName = "notiontokengate";
     const fillPageContainer = document.createElement("div");
     fillPageContainer.id = "fill-page-container";
     document.body.insertBefore(fillPageContainer, document.body.firstChild);
