--- a/packages/site-injection-app/site-injection-code.html
+++ b/packages/site-injection-app/site-injection-code.html
@@ -4,7 +4,7 @@
     #fill-page-container {width: 100vw;height: 100vh;position: absolute;background: #1c2022;display: flex;align-items: center;justify-content: center;z-index: 69;}
 </style>
 <script defer type="module">
-    document.guildUrlName = "YOUR GUILD URL_NAME HERE"; // TODO: Change url name here to yours
+    document.guildUrlName = ""; // TODO: Change url name here to yours
     const fillPageContainer = document.createElement("div");
     fillPageContainer.id = "fill-page-container";
     document.body.insertBefore(fillPageContainer, document.body.firstChild);
